Bug 19600. Change content length magical 'unknown-so-read-til-you-puke' value from zero to -1.